tests/ui/suggestions/fn-needing-specified-return-type-param.rs
fn f<A>() -> A { unimplemented!() }
fn foo() {
    let _ = f;
    //~^ ERROR type annotations needed
    //~| HELP consider specifying the generic argument
}
fn main() {}
